# kan-lab

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  train.py
configs/: config.yaml
configs/dataset/: bessel.yaml  deepformula.yaml  expsin.yaml  fashion_mnist.yaml  feynman_i_12_11.yaml  feynman_i_13_12.yaml  feynman_i_6_2.yaml  feynman_i_6_2b.yaml  feynman_i_9_18.yaml  gaussian_blob.yaml  highdim.yaml  mnist.yaml  multiplication.yaml  sincos.yaml  weak_lensing.yaml
configs/experiment/: model_comparison.yaml  pykan_expsin_tuning.yaml  sweep_grid_sizes.yaml  test.yaml  train_bessel.yaml  tune_base.yaml  tune_chebykan.yaml  tune_efficient_kan.yaml  tune_fast_kan.yaml  tune_faster_kan.yaml  tune_mlp.yaml  tune_pykan.yaml  tune_relukan.yaml  (+1 more)
mlflow/: server_url.txt
notebooks/: 01_kan_basics.ipynb  02_symbolic_regression.ipynb  03_grid_extension.ipynb  03_pykan_grid_extension.ipynb  04_kan_vs_mlp.ipynb  Example_3_deep_formula.ipynb  Phase_1_Startingkit_WL_CNN_Direct.ipynb  gaussian_blob_examples.ipynb  test.ipynb
scripts/: _tune_common.sh  mlflow_server.sh  mlflow_server.submit  run_efficient_kan.sh  run_pykan_tuning.sh  run_tuning.sh  run_tuning.submit  run_tuning_submitit.sh  run_tuning_submitit.submit  submit_all.sh  submit_all_mnist_blob.sh  tune_efficientkan.submit  tune_efficientkan_mnist_blob.submit  tune_fasterkan.submit  tune_fasterkan_rerun.submit  tune_fastkan.submit  tune_fastkan_mnist_blob.submit  tune_fastkan_rerun.submit  tune_pykan.submit  tune_pykan_adam.submit  tune_wavkan.submit  tune_wavkan_mnist_blob.submit
src/: __init__.py
(+115 files in other folders)
