[project]
name = "kan-lab"
version = "0.1.0"
description = "KAN architecture experiments – comparing pykan, efficient-kan, and MLP baselines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "mlflow>=3.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pandas>=2.0",
    "tqdm>=4.0",
]
