[project]
name = "kan-lab"
version = "0.1.0"
description = "KAN architecture experiments – comparing pykan, efficient-kan, and MLP baselines"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5,<2.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "mlflow>=3.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pandas>=2.0",
    "tqdm>=4.0",
    "hydra-optuna-sweeper>=1.2",
    "torchvision>=0.20,<0.21",
    "pykan==0.2.7",
    "nvidia-ml-py>=13.595.45",
    "psutil>=7.2.2",
    "timm==1.0.3",
    "kat-rational",
]

[tool.uv.sources]
kat-rational = { git = "https://github.com/Adamdad/rational_kat_cu.git" }

[tool.uv.extra-build-dependencies]
kat-rational = ["torch"]
